chore: initial commit  project root

--- a/main-panel/projects/index.html
+++ b/main-panel/projects/index.html
@@ -92,7 +92,7 @@
 </body>
 <script>
     function locatePanelItem(panelItem) {
-        window.location.href = "./" + panelItem + "/";
+        window.location.href = "../projects/" + panelItem;
     }
 </script>
 
