Add services select

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         let email = document.getElementById("email").value;
         let password = document.getElementById("password").value;
         let retVal = false;
-        if (email == "admin" && password == "123") {
+        if (email == "admin@gmail.com" && password == "12345678") {
             retVal = true;
             window.location.href = "main-panel/";
         }
