--- a/main-panel/index.html
+++ b/main-panel/index.html
@@ -105,14 +105,14 @@
         <!--Main Panel (for max-lg)-->
         <div
             class="hidden max-lg:grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 gap-6 w-fit  h-fit py-6 text-white px-12">
-            <div onclick="locatePanelItem('dash');"
+            <!-- <div onclick="locatePanelItem('dash');"
                 class="border-animated w-[200px] max-lg:w-[150px] h-[200px] max-lg:h-[150px] rounded-lg hover:scale-90 transition-all cursor-pointer uppercase lg:text-xl">
                 <div class="card w-full h-full bg-[#0B3037] rounded-lg flex flex-col gap-3 justify-center items-center">
                     <img src="../images/main-panel/btn-icons/dash.svg"
                         class="w-[105px] h-[105px] max-lg:w-[70px] max-lg:h-[70px]" alt="">
                     <p>Dashboard</p>
                 </div>
-            </div>
+            </div> -->
 
             <div onclick="locatePanelItem('projects');"
                 class="border-animated w-[200px] max-lg:w-[150px] h-[200px] max-lg:h-[150px] rounded-lg hover:scale-90 transition-all cursor-pointer uppercase lg:text-xl">
@@ -130,20 +130,20 @@
                     <p>Agent</p>
                 </div>
             </div>
-            <div onclick="locatePanelItem('#');"
+            <!-- <div onclick="locatePanelItem('#');"
                 class="border-animated w-[200px] max-lg:w-[150px] h-[200px] max-lg:h-[150px] rounded-lg hover:scale-90 transition-all cursor-pointer uppercase lg:text-xl">
                 <div class="card w-full h-full bg-[#0B3037] rounded-lg flex flex-col gap-3 justify-center items-center">
                     <img src="../images/main-panel/btn-icons/settings.svg"
                         class="w-[105px] h-[105px] max-lg:w-[70px] max-lg:h-[70px]" alt="">
                     <p>Settings</p>
                 </div>
-            </div>
+            </div> -->
         </div>
         <!--Main Panel (for lg)-->
         <div class="hidden lg:grid place-items-center w-full">
             <div class="flex justify-center w-full">
-                <div class="grid grid-cols-4 gap-6 w-full max-w-5xl mx-auto py-3 text-white justify-items-center">
-                    <div onclick="locatePanelItem('dash');"
+                <div class="grid grid-cols-2 gap-4 w-full max-w-lg mx-auto py-3 text-white justify-items-center">
+                    <!-- <div onclick="locatePanelItem('dash');"
                         class="border-animated w-[200px] max-xl:w-[150px] h-[200px] max-xl:h-[150px] rounded-lg hover:scale-90 transition-all cursor-pointer uppercase lg:text-xl">
                         <div
                             class="card w-full h-full bg-[#0B3037] rounded-lg flex flex-col gap-3 justify-center items-center">
@@ -151,7 +151,7 @@
                                 class="w-[105px] h-[105px] max-xl:w-[70px] max-xl:h-[70px]" alt="">
                             <p>Dashboard</p>
                         </div>
-                    </div>
+                    </div> -->
                     <div onclick="locatePanelItem('projects');"
                         class="border-animated w-[200px] max-xl:w-[150px] h-[200px] max-xl:h-[150px] rounded-lg hover:scale-90 transition-all cursor-pointer uppercase lg:text-xl">
                         <div
@@ -170,7 +170,7 @@
                             <p>Agent</p>
                         </div>
                     </div>
-                    <div onclick="locatePanelItem('#');"
+                    <!-- <div onclick="locatePanelItem('#');"
                         class="border-animated w-[200px] max-xl:w-[150px] h-[200px] max-xl:h-[150px] rounded-lg hover:scale-90 transition-all cursor-pointer uppercase lg:text-xl">
                         <div
                             class="card w-full h-full bg-[#0B3037] rounded-lg flex flex-col gap-3 justify-center items-center">
@@ -178,7 +178,7 @@
                                 class="w-[105px] h-[105px] max-xl:w-[70px] max-xl:h-[70px]" alt="">
                             <p>Settings</p>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
 
