--- a/main-panel/projects/addProject/index.html
+++ b/main-panel/projects/addProject/index.html
@@ -23,7 +23,7 @@
 <body class="h-dvh flex flex-col">
     <!--Nav-->
     <div
-        class="nav bg-[#134E5E] w-full h-[17dvh] max-sm:py-6 rounded-b-full flex justify-between pt-4 pb-4 items-center max-lg:justify-center max-lg:flex-col">
+        class="nav bg-[#134E5E] w-full h-[17dvh] rounded-b-full flex justify-between min-sm:py-6 py-10 items-center max-lg:justify-center max-lg:flex-col">
         <span class="flex items-center gap-3 ml-20 max-lg:ml-0 max-sm:scale-75">
             <button onclick="history.go ( -1);"
                 class="rounded-full w-[50px] aspect-square bg-white flex justify-center items-center hover:scale-90 transition-all">
@@ -40,7 +40,7 @@
             <h3 class="text-2xl max-md:text-sm text-white">Welcome Sahan Ranawaka</h3>
             <!--log out btn-->
             <button onclick="window.location.href = '../../../';"
-                class="rounded-full w-[50px] aspect-square bg-white flex justify-center items-center hover:scale-90 transition-all">
+                class="rounded-full w-[40px] aspect-square bg-white flex justify-center items-center hover:scale-90 transition-all">
                 <img src="../../../images/common/logout.png" alt="logout">
             </button>
         </span>
@@ -134,6 +134,21 @@
                     <div class="mb-4">
                         <label for="city" class="form-label">City <span class="text-red-500">*</span></label>
                         <input type="text" id="city" class="form-input" placeholder="">
+                    </div>
+
+                    <div class="mb-4">
+                        <label for="service-type" class="form-label">Services <span class="text-red-500">*</span></label>
+                        <select id="service-type" class="form-input appearance-none bg-white">
+                            <option value="" disabled selected>Select a service</option>
+                            <option value="ai-solutions">AI Solutions</option>
+                            <option value="mobile-app-dev">Mobile Application Developments</option>
+                            <option value="website-dev">Website Developments</option>
+                            <option value="cyber-security">Cyber Security</option>
+                            <option value="data-analytics">Data Analytics</option>
+                            <option value="seo">SEO</option>
+                            <option value="virtual-assistant">Virtual Assistant</option>
+                            <option value="digital-marketing">Digital Marketing Services</option>
+                        </select>
                     </div>
                 </div>
 
@@ -245,19 +260,21 @@
         </div>
         <div class="flex-grow"></div>
         <footer class="sticky bottom-0 bg-white border-t border-gray-200 shadow-lg p-4 z-20">
-        <div class="max-w-4xl mx-auto flex justify-between sm:justify-center space-x-4">
-            <button
-                class="w-1/3 sm:w-40 bg-[#0B3037] hover:bg-[#143e46] text-white font-bold py-3 rounded-lg transition duration-150 ease-in-out shadow-md">
-                Submit
-            </button>
-            <button
-                class="w-1/3 sm:w-40 bg-[#134E5E] hover:bg-[#1e6174] text-white font-bold py-3 rounded-lg transition duration-150 ease-in-out shadow-md">
-                Reset
-            </button>
-        </div>
-    </footer>
-        <footer
-            class="h-[80px] bg-[#134E5E] max-md:text-sm max-sm:text-xs max-md:flex-col text-center w-full flex items-center text-white justify-center gap-3">
+            <div class="max-w-4xl mx-auto flex justify-between sm:justify-center space-x-4">
+                <button
+                    class="w-1/3 sm:w-40 bg-[#0B3037] hover:bg-[#143e46] text-white font-bold py-3 rounded-lg transition duration-150 ease-in-out shadow-md">
+                    Submit
+                </button>
+                <button
+                    class="w-1/3 sm:w-40 bg-[#134E5E] hover:bg-[#1e6174] text-white font-bold py-3 rounded-lg transition duration-150 ease-in-out shadow-md">
+                    Reset
+                </button>
+            </div>
+        </footer>
+        <footer class="h-[80px] bg-[#134E5E] max-md:text-sm max-sm:text-xs text-white w-full 
+           flex items-center justify-center 
+           max-sm:flex-col max-sm:space-y-1 max-sm:h-auto max-sm:py-3 max-sm:px-5 max-md:py-4 max-md:px-6 
+           gap-3 text-center">
             <p>2025 © All Rights Reserved | Powered by Silicon Radon Networks (Pvt) Ltd</p>
         </footer>
     </div>
