--- a/main-panel/projects/editProject/index.html
+++ b/main-panel/projects/editProject/index.html
@@ -27,7 +27,7 @@
 
 <body class="h-dvh flex flex-col">
     <div
-        class="nav bg-[#134E5E] w-full h-[17dvh] max-sm:py-6 rounded-b-full flex justify-between pt-4 pb-4 items-center max-lg:justify-center max-lg:flex-col">
+        class="nav bg-[#134E5E] w-full h-[17dvh] max-sm:py-6 rounded-b-full flex justify-between py-10 items-center max-lg:justify-center max-lg:flex-col">
         <span class="flex items-center gap-3 ml-20 max-lg:ml-0 max-sm:scale-75">
             <button onclick="history.go ( -1);"
                 class="rounded-full w-[50px] aspect-square bg-white flex justify-center items-center hover:scale-90 transition-all">
@@ -295,8 +295,10 @@
             </div>
         </div>
         
-        <footer
-            class="h-[80px] bg-[#134E5E] max-md:text-sm max-sm:text-xs max-md:flex-col text-center w-full flex items-center text-white justify-center gap-3">
+        <footer class="h-[80px] bg-[#134E5E] max-md:text-sm max-sm:text-xs text-white w-full 
+           flex items-center justify-center 
+           max-sm:flex-col max-sm:space-y-1 max-sm:h-auto max-sm:py-3 max-sm:px-5 max-md:py-4 max-md:px-6 
+           gap-3 text-center">
             <p>2025 © All Rights Reserved | Powered by Silicon Radon Networks (Pvt) Ltd</p>
         </footer>
     </div>
