--- a/main-panel/projects/index.html
+++ b/main-panel/projects/index.html
@@ -14,7 +14,7 @@
 <body class="h-dvh">
     <!--Nav-->
     <div
-        class="nav bg-[#134E5E] w-full h-1/6 max-lg:h-[17dvh] max-sm:py-6 rounded-b-full flex justify-between items-center max-lg:justify-center max-lg:flex-col">
+        class="nav bg-[#134E5E] w-full h-1/6 max-lg:h-[17dvh] max-sm:py-6 py-10 rounded-b-full flex justify-between items-center max-lg:justify-center max-lg:flex-col">
         <span class="flex items-center gap-3 ml-20 max-lg:ml-0 max-sm:scale-75">
             <button onclick="history.go ( -1);"
                 class="rounded-full w-[50px] aspect-square bg-white flex justify-center items-center hover:scale-90 transition-all">
