--- a/main-panel/projects/projectList/index.html
+++ b/main-panel/projects/projectList/index.html
@@ -26,7 +26,7 @@
 <body class="bg-gray-100 min-h-screen">
 
     <div
-        class="nav bg-[#134E5E] w-full h-1/6 space-y-5 pb-7 max-lg:h-[17dvh] max-sm:py-6 rounded-b-full flex justify-between items-center max-lg:justify-center max-lg:flex-col">
+        class="nav bg-[#134E5E] w-full h-1/6 space-y-5 pb-7 max-lg:h-[17dvh] max-sm:py-6 py-6 rounded-b-full flex justify-between items-center max-lg:justify-center max-lg:flex-col">
         <span class="flex items-center gap-3 ml-20 max-lg:ml-0 max-sm:scale-75">
             <button onclick="history.go ( -1);"
                 class="rounded-full w-[50px] aspect-square bg-white flex justify-center items-center hover:scale-90 transition-all">
@@ -257,10 +257,12 @@
         </div>
     </main>
 
-    <footer
-        class="h-[80px] bg-[#134E5E] max-md:text-sm max-sm:text-xs max-md:flex-col text-center w-full flex items-center text-white justify-center gap-3">
-        <p>2025 © All Rights Reserved | Powered by Silicon Radon Networks (Pvt) Ltd</p>
-    </footer>
+    <footer class="h-[80px] bg-[#134E5E] max-md:text-sm max-sm:text-xs text-white w-full 
+           flex items-center justify-center 
+           max-sm:flex-col max-sm:space-y-1 max-sm:h-auto max-sm:py-3 max-sm:px-5 max-md:py-4 max-md:px-6 
+           gap-3 text-center">
+            <p>2025 © All Rights Reserved | Powered by Silicon Radon Networks (Pvt) Ltd</p>
+        </footer>
 
     <div id="project-modal" class="fixed inset-0 z-50 hidden overflow-y-auto" aria-labelledby="modal-title" role="dialog" aria-modal="true">
         <div class="flex items-center justify-center min-h-screen p-4 text-center sm:block sm:p-0">
