--- a/main-panel/projects/projectList/index.html
+++ b/main-panel/projects/projectList/index.html
@@ -118,6 +118,8 @@
                         <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
                             Client</th>
                         <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                            Service</th>
+                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
                             Status</th>
                         <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Start
                             Date</th>
@@ -130,6 +132,7 @@
                         <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">Q3 Marketing Campaign
                         </td>
                         <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">GlobalTech Inc.</td>
+                        <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">Digital Marketing Bundle</td>
                         <td class="px-6 py-4 whitespace-nowrap">
                             <span
                                 class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-green-100 text-green-800">
@@ -147,6 +150,7 @@
                         <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">New Product Feature V2
                         </td>
                         <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">In-house</td>
+                        <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">Product Feature Rollout</td>
                         <td class="px-6 py-4 whitespace-nowrap">
                             <span
                                 class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-yellow-100 text-yellow-800">
@@ -164,6 +168,7 @@
                         <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">Server Migration Plan
                         </td>
                         <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">DataCorp Ltd.</td>
+                        <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">Infrastructure Migration</td>
                         <td class="px-6 py-4 whitespace-nowrap">
                             <span
                                 class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-red-100 text-red-800">
@@ -190,6 +195,7 @@
                         </span>
                     </div>
                     <p class="text-sm text-gray-600 mb-1">Client: GlobalTech Inc.</p>
+                    <p class="text-sm text-gray-600 mb-1">Service: Digital Marketing Bundle</p>
                     <p class="text-sm text-gray-600 mb-3">Start Date: 2025-07-01</p>
                     <div class="flex space-x-4">
                         <a href="#" onclick="openProjectModal('project-1')" class="text-sm font-medium text-blue-600 hover:text-blue-900">View Details</a>
