--- a/main-panel/index.html
+++ b/main-panel/index.html
@@ -115,7 +115,7 @@
             </div> -->
 
             <div onclick="locatePanelItem('projects');"
-                class="border-animated w-[200px] max-lg:w-[150px] h-[200px] max-lg:h-[150px] rounded-lg hover:scale-90 transition-all cursor-pointer uppercase lg:text-xl">
+                class="border-animated w-[200px] h-[200px] rounded-lg hover:scale-90 transition-all cursor-pointer uppercase lg:text-xl">
                 <div class="card w-full h-full bg-[#0B3037] rounded-lg flex flex-col gap-3 justify-center items-center">
                     <img src="../images/main-panel/btn-icons/billing.svg"
                         class="w-[105px] h-[105px] max-lg:w-[70px] max-lg:h-[70px]" alt="">
@@ -123,7 +123,7 @@
                 </div>
             </div>
             <div onclick="locatePanelItem('#');"
-                class="border-animated w-[200px] max-lg:w-[150px] h-[200px] max-lg:h-[150px] rounded-lg hover:scale-90 transition-all cursor-pointer uppercase lg:text-xl">
+                class="border-animated w-[200px] h-[200px] rounded-lg hover:scale-90 transition-all cursor-pointer uppercase lg:text-xl">
                 <div class="card w-full h-full bg-[#0B3037] rounded-lg flex flex-col gap-3 justify-center items-center">
                     <img src="../images/main-panel/btn-icons/customer.svg"
                         class="w-[105px] h-[105px] max-lg:w-[70px] max-lg:h-[70px]" alt="">
